--- a/banking/package.json
+++ b/banking/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
+    "date-fns": "^2.29.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
