--- a/banking/package.json
+++ b/banking/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
