--- a/banking/package.json
+++ b/banking/package.json
@@ -12,7 +12,8 @@
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
