--- a/banking/package.json
+++ b/banking/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vue-tsc && vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
@@ -12,10 +12,12 @@
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
+    "vite-plugin-vue": "^0.0.0",
     "vue": "^3.2.45",
     "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
