--- a/banking/package.json
+++ b/banking/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vue-tsc && vite",
+    "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/vue": "^2.0.0",
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
